# ChewPy

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/: getting-started.md  index.md  reference.md
src/chewpy/: __init__.py  __main__.py  commands.py
src/chewpy/translator/: commands.py  subtitles.py
src/chewpy/utility/: logs.py  secrets.py
tests/: test_main.py
